--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="bg-indigo-700 mx-30 my-20">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
