technique changée, simplifiée et fonctionnelle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-primary mx-30 my-20">
+<html lang="en" class="pink bg-primary mx-30 my-20">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
